--- a/form.css
+++ b/form.css
@@ -13,3 +13,8 @@
     border: 1px solid red; /* Change border color on focus for mandatory fields */
     outline: none; /* Remove default focus outline */
 }
+
+@media screen and (min-width: 769px)
+ {
+   
+}
